<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BicycleFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/edittext_rounded_corners"
                android:backgroundTint="@color/bg_color"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textSize="16dp"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:text="@string/timeLeft"/>
            <TextView
                android:id="@+id/textViewTime"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/edittext_rounded_corners"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:textSize="16dp"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:text="00:00:10"/>
        </LinearLayout>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/use"
            android:textColor="@color/black"/>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="16dp"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:text="@string/bikeNumber"/>
        <TextView
            android:id="@+id/textViewNumber"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="25dp"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:text="@string/number"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:src="@drawable/bicycle"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"/>
        <Button
            android:id="@+id/buttonReturnBike"
            android:layout_height="wrap_content"
            android:layout_width="300dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/red"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:text="@string/returnBike"
            android:layout_marginTop="30dp"/>
    </LinearLayout>

</FrameLayout>