<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/bg_color">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:src="@drawable/login_logo"/>

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewEmail"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"
        android:textColor="@color/white"/>

    <EditText
        android:id="@+id/editTextEmail"
        android:inputType="textEmailAddress"
        android:layout_height="wrap_content"
        android:layout_width="300dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/edittext_rounded_corners"
        android:textColor="@color/black"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/textViewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewPassword"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"
        android:textColor="@color/white"/>

    <EditText
        android:id="@+id/editTextPassword"
        android:inputType="textPassword"
        android:layout_height="wrap_content"
        android:layout_width="300dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/edittext_rounded_corners"
        android:textColor="@color/black"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/buttonLogin"
        android:layout_height="wrap_content"
        android:layout_width="300dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/black"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:text="@string/buttonLogin"
        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/textViewCreateAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal" />

</LinearLayout>